fix dark mode color

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@
 }
 
 .dark {
-  --background: oklch(10.511% 0.02984 250.114);
+  --background: oklch(16.619% 0.01043 285.193);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
